[gd_scene load_steps=113 format=3 uid="uid://dmkkqwuh3bgjq"]

[ext_resource type="Script" uid="uid://bwbl61blgejor" path="res://Scripts/player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://na4waipel40v" path="res://Animations/player/Outlined_15_Cat_Attack-Sheet.png" id="2_bwjto"]
[ext_resource type="Texture2D" uid="uid://xjyahkrffv8l" path="res://Animations/player/Outlined_6_Cat_Dash-Sheet.png" id="3_606se"]
[ext_resource type="Texture2D" uid="uid://dp3katcjqbsjj" path="res://Animations/player/Outlined_18_Cat_Death-Sheet.png" id="4_u1c27"]
[ext_resource type="Texture2D" uid="uid://cyx7xp0tahn3n" path="res://Animations/player/Outlined_13_Cat_Double_Jump-Sheet.png" id="5_op7ga"]
[ext_resource type="Texture2D" uid="uid://hft3d3b1qqa0" path="res://Animations/player/Outlined_4_Cat_Fall-Sheet.png" id="6_q13i1"]
[ext_resource type="Texture2D" uid="uid://b73lr8d0e5157" path="res://Animations/player/Outlined_1_Cat_Idle-Sheet.png" id="7_pylmc"]
[ext_resource type="Texture2D" uid="uid://c52rx1unscowu" path="res://Animations/player/Outlined_3_Cat_Jump-Sheet.png" id="8_pbfsw"]
[ext_resource type="Texture2D" uid="uid://bu2nmv3vig3uq" path="res://Animations/player/Outlined_16_Cat_Jump_Attack-Sheet.png" id="9_5tmop"]
[ext_resource type="Texture2D" uid="uid://27xw5j2cib3a" path="res://Animations/player/Outlined_14_Cat_Long_Double_Jump-Sheet.png" id="10_7ahtn"]
[ext_resource type="Texture2D" uid="uid://bqrkoubp6nerx" path="res://Animations/player/Outlined_11_Cat_Long_Roll-Sheet.png" id="11_7lmhl"]
[ext_resource type="Texture2D" uid="uid://cij3nepvk2vfk" path="res://Animations/player/Outlined_10_Cat_Roll-Sheet.png" id="12_dx0e4"]
[ext_resource type="Texture2D" uid="uid://bajkdjuh60big" path="res://Animations/player/Outlined_2_Cat_Run-Sheet.png" id="13_jm5j8"]
[ext_resource type="Texture2D" uid="uid://dnufyyipkf87a" path="res://Animations/player/Outlined_17_Cat_Take_Damage-Sheet.png" id="14_7hik5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("2_bwjto")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("2_bwjto")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("2_bwjto")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("2_bwjto")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("2_bwjto")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("2_bwjto")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("3_606se")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("3_606se")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("3_606se")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("3_606se")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("4_u1c27")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("4_u1c27")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("4_u1c27")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("4_u1c27")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("4_u1c27")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("4_u1c27")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("4_u1c27")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("4_u1c27")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("4_u1c27")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("5_op7ga")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("5_op7ga")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("5_op7ga")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("5_op7ga")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("5_op7ga")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("5_op7ga")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("5_op7ga")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("5_op7ga")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("6_q13i1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("6_q13i1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("6_q13i1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("6_q13i1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("7_pylmc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("7_pylmc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("7_pylmc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("7_pylmc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("7_pylmc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yem3p"]
atlas = ExtResource("7_pylmc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86rna"]
atlas = ExtResource("7_pylmc")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1a7"]
atlas = ExtResource("7_pylmc")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob4mi"]
atlas = ExtResource("8_pbfsw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax26h"]
atlas = ExtResource("8_pbfsw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh4g0"]
atlas = ExtResource("8_pbfsw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgmjd"]
atlas = ExtResource("8_pbfsw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2xi"]
atlas = ExtResource("9_5tmop")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkf2u"]
atlas = ExtResource("9_5tmop")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jk6"]
atlas = ExtResource("9_5tmop")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feeoa"]
atlas = ExtResource("9_5tmop")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nxt"]
atlas = ExtResource("9_5tmop")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym00c"]
atlas = ExtResource("9_5tmop")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee2o4"]
atlas = ExtResource("10_7ahtn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vie4p"]
atlas = ExtResource("10_7ahtn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jj5r"]
atlas = ExtResource("10_7ahtn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77e46"]
atlas = ExtResource("10_7ahtn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy2ki"]
atlas = ExtResource("10_7ahtn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04cqw"]
atlas = ExtResource("10_7ahtn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vihdy"]
atlas = ExtResource("10_7ahtn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c55y"]
atlas = ExtResource("10_7ahtn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoal8"]
atlas = ExtResource("10_7ahtn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htija"]
atlas = ExtResource("10_7ahtn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_he65s"]
atlas = ExtResource("10_7ahtn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0yt3"]
atlas = ExtResource("10_7ahtn")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uckl6"]
atlas = ExtResource("11_7lmhl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ihbc"]
atlas = ExtResource("11_7lmhl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc53x"]
atlas = ExtResource("11_7lmhl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro7of"]
atlas = ExtResource("11_7lmhl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn2kn"]
atlas = ExtResource("11_7lmhl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tmhn"]
atlas = ExtResource("11_7lmhl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpvxe"]
atlas = ExtResource("11_7lmhl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qicb8"]
atlas = ExtResource("11_7lmhl")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o2m3"]
atlas = ExtResource("11_7lmhl")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hmo1"]
atlas = ExtResource("11_7lmhl")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uygay"]
atlas = ExtResource("11_7lmhl")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpay4"]
atlas = ExtResource("11_7lmhl")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfa3h"]
atlas = ExtResource("12_dx0e4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04g4e"]
atlas = ExtResource("12_dx0e4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx1qc"]
atlas = ExtResource("12_dx0e4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_elm0x"]
atlas = ExtResource("12_dx0e4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7vj2"]
atlas = ExtResource("12_dx0e4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtw5u"]
atlas = ExtResource("12_dx0e4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f37gn"]
atlas = ExtResource("12_dx0e4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jccjf"]
atlas = ExtResource("12_dx0e4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhi2v"]
atlas = ExtResource("13_jm5j8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipvpa"]
atlas = ExtResource("13_jm5j8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nevyh"]
atlas = ExtResource("13_jm5j8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhr50"]
atlas = ExtResource("13_jm5j8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u4el"]
atlas = ExtResource("13_jm5j8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5i73"]
atlas = ExtResource("13_jm5j8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7swm"]
atlas = ExtResource("13_jm5j8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bobas"]
atlas = ExtResource("13_jm5j8")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmuuc"]
atlas = ExtResource("13_jm5j8")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6q74"]
atlas = ExtResource("13_jm5j8")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhe1y"]
atlas = ExtResource("14_7hik5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jk4c"]
atlas = ExtResource("14_7hik5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hr8l"]
atlas = ExtResource("14_7hik5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2etn"]
atlas = ExtResource("14_7hik5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ivps1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": false,
"name": &"Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}],
"loop": true,
"name": &"Double_Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}],
"loop": true,
"name": &"Fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yem3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1a7")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh4g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgmjd")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkf2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feeoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym00c")
}],
"loop": false,
"name": &"Jump_Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee2o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vie4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jj5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77e46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy2ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04cqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vihdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c55y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoal8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htija")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he65s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0yt3")
}],
"loop": true,
"name": &"Long_Double_Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uckl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ihbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc53x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro7of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn2kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tmhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpvxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qicb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o2m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hmo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uygay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpay4")
}],
"loop": true,
"name": &"Long_Roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfa3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04g4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx1qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elm0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7vj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtw5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f37gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jccjf")
}],
"loop": true,
"name": &"Roll",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhi2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipvpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nevyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhr50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u4el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5i73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7swm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bobas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmuuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6q74")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhe1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jk4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hr8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2etn")
}],
"loop": true,
"name": &"Take_Damage",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7dp3o"]
radius = 6.5
height = 21.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dp3o"]
size = Vector2(24, 20)

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_4flbx")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ivps1")
animation = &"Death"
autoplay = "Idle"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 1.5)
shape = SubResource("CapsuleShape2D_7dp3o")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="ColliderAttackZone" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(12, 2)
shape = SubResource("RectangleShape2D_7dp3o")

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
